# PROTEINS

./: .2m0z.pdb.icloud  1pdz.ca  README.md  dsjs  let's start
CUTOFF/: Downlaod_data.py  Entropy_epsilon_temperature.py  Entropy_epsilon_with_temeprature.py  beta_with_temperature.py  correlation.py  cutoff_correlatio.py  entropy_rate.py  epsilon_with_temeprature copy.py  grafico_temperatura.py  matrix.py  stocastico.py  temperatura_cutoff.py
DYNAMIC/: FINALLLL.py  Visualize.py  dinalica_accelerata.py  funtions.py  simple_dynamic.py  solo oscill.py  stochastic_2_temp.py  tentativo.py  ultima_dinamica.py
SFERIC/: Entropy_epsilon_temperature.py  Entropy_epsilon_with_temeprature.py  beta_with_temperature.py  correlation_matrix.py  epsilon_with_temeprature copy.py  (+1 more)
STATIC/: 2_temp_sferic.py  2_temperature_cutoff.py  2m0z.py  2m10.mod  2m10.py  3LNX.py  3LNY.py  Downlaod_data.py  Dynamic.py  PKGBUILD  README.md  Visualize.py  _t_try.py  best_possible_graph.py  beta_factors.py  beta_functions.py  causal_indicators.py  causal_indicators_advances.py  comprenisone.py  comprensione.py  epsilon_temperature.py  floquet.py  identificazione_residuo.py  matrix.py  multiple_time_response.py  risposta_in_time.py  secondary_structure.py  secondary_structure_grafico.py  seocndaty_structure_graphs.py  set_up.py  setup.cfg  temperatura_cutoff.py  temperatura_sferica.py  test.py  test_casual.py
STATIC/pdb_files/: .2m10.pdb.icloud
STATIC/tesi/: ciao 2.aux  ciao 2.fdb_latexmk  ciao 2.fls  ciao.aux  ciao.fdb_latexmk  ciao.fls  ciao.tex  tentativo.fdb_latexmk  tentativo.fls
latex/: latex
(+29 files in other folders)
