[metadata]
name = DelphyDD
version = 0.0.1
author = Enrico Bignozzi
mantainer = Enrico Bignozzi
mantainer_email = bignozzi.1855163@studenti.uniroma1.it
description = Analysis and Dynamic of a generic Protein
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where=src
[options.package_data]
* =
    *.csv
    *.pkl

[options.entry_points]
console_scripts =
    delphydd = DelphyDD:main


